samples/_failures_safe/1761429104_002bb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45dbcf5e.c: In function ‘main’:
./samples/SAFE/__tmp_45dbcf5e.c:164:9: error: expected declaration or statement at end of input
  164 |         printf("Stack creation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_45dbcf5e.c:164:9: error: expected declaration or statement at end of input
